--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   <div class="container">
     <div class="icon">❌</div>
     <h1>فشل تفعيل البريد</h1>
-    <p>عذرًا، الرابط غير صالح أو انتهت صلاحيته. الرجاء المحاولة مرة أخرى أو التواصل معنا.</p>
-    <a href="mailto:support@yourdomain.com" class="button">اتصل بالدعم</a>
+    <p>الرابط غير صالح أو منتهي. حاول مرة أخرى من داخل التطبيق.</p>
+    <a href="yourapp://home" class="button">الرجوع إلى التطبيق</a>
   </div>
 </body>
 </html>
